# ChangeLog for gnustep-base/gnustep-base
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-base/ChangeLog,v 1.21 2005/03/17 20:52:30 fafhrd Exp $

*gnustep-base-1.10.2_pre20050312 (17 Mar 2005)

  17 Mar 2005; Armando Di Cianno <fafhrd@gentoo.org>
  +files/base-user-defaults.patch-1.10.2_pre20050312,
  -gnustep-base-1.10.2_pre20041203.ebuild,
  -gnustep-base-1.10.2_pre20050106.ebuild,
  +gnustep-base-1.10.2_pre20050312.ebuild:
  ebuild updates for GNUstep base, libs, and apps across the board; proper
  versions (to be stabilized, in due time) added where apropos, cvs-pull
  versions updated where needed

  10 Jan 2005; Armando Di Cianno <fafhrd@gentoo.org>
  gnustep-base-1.10.1-r1.ebuild:
  Marking stable for x86

*gnustep-base-1.10.2_pre20050106 (10 Jan 2005)

  10 Jan 2005; Armando Di Cianno <fafhrd@gentoo.org>
  +gnustep-base-1.10.2_pre20050106.ebuild:
  cvs snapshot version bumps; cleaned out old cvs versioned ebuilds; fixed
  date spec on ebuild headers as repoman was complaining

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  13 Dec 2004; Armando Di Cianno <fafhrd@gentoo.org> -files/tryffi.c,
  -gnustep-base-1.10.0.ebuild, gnustep-base-1.10.1-r1.ebuild,
  -gnustep-base-1.10.1.ebuild, -gnustep-base-1.10.1_pre20040928.ebuild,
  -gnustep-base-1.10.2_pre20041116.ebuild,
  gnustep-base-1.10.2_pre20041203.ebuild:
  Cleaned up detection of objc and libff; general cleanups

  05 Dec 2004; Armando Di Cianno <fafhrd@gentoo.org> +files/tryffi.c,
  gnustep-base-1.10.2_pre20041203.ebuild:
  Added a test where if gcc-libffi is USE flag on, then a test program is
  compiled and linked, verifying the use of libffi

*gnustep-base-1.10.2_pre20041203 (03 Dec 2004)

  03 Dec 2004; Armando Di Cianno <fafhrd@gentoo.org>
  +gnustep-base-1.10.2_pre20041203.ebuild:
  General version bump

*gnustep-base-1.10.2_pre20041116 (16 Nov 2004)
